@@ -1,3 +1,3 @@
-confdb.version=V01-06-42
+confdb.version=V01-06-43
 confdb.contact=raul.jimenez.estupinan@cern.ch
-confdb.url=http://j2eeps-test.cern.ch/test-cms-project-confdb-hltdev/
+confdb.url=http://j2eeps.cern.ch/cms-project-confdb-hltdev/
